[gd_scene load_steps=30 format=3 uid="uid://ndn6cborfmmg"]

[ext_resource type="Script" uid="uid://dc2qh7h8w7ibl" path="res://scenes/tutorial.gd" id="1_6yjpi"]
[ext_resource type="Texture2D" uid="uid://d1td2jp3rb5j1" path="res://assets/Background/Green.png" id="1_ph3nu"]
[ext_resource type="PackedScene" uid="uid://f3d6lguewtks" path="res://scenes/tutorial_player.tscn" id="2_6yjpi"]
[ext_resource type="Script" uid="uid://bjm75opqrpty" path="res://scenes/PalyerCamera.gd" id="3_gbqnl"]
[ext_resource type="TileSet" uid="uid://b8n62pqdhsqkn" path="res://assets/Terrain/maptile.tres" id="4_cq4me"]
[ext_resource type="PackedScene" uid="uid://cuxn2ncimf10h" path="res://scenes/boar.tscn" id="5_6yjpi"]
[ext_resource type="Texture2D" uid="uid://b8y18wlyx4rgq" path="res://assets/Items/Portal/Portal.png" id="6_nlqja"]
[ext_resource type="Texture2D" uid="uid://2ifmiyqvnuyi" path="res://assets/Traps/Arrow/Idle (18x18).png" id="8_ckvwl"]
[ext_resource type="Theme" uid="uid://dq2k6takiambk" path="res://themes/theme.tres" id="8_nlqja"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nlqja"]
blend_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_0epgs"]
atlas = ExtResource("8_ckvwl")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2equ"]
atlas = ExtResource("8_ckvwl")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbcdj"]
atlas = ExtResource("8_ckvwl")
region = Rect2(36, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej4tf"]
atlas = ExtResource("8_ckvwl")
region = Rect2(54, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hilk"]
atlas = ExtResource("8_ckvwl")
region = Rect2(72, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr8iv"]
atlas = ExtResource("8_ckvwl")
region = Rect2(90, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_e13mp"]
atlas = ExtResource("8_ckvwl")
region = Rect2(108, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrdqu"]
atlas = ExtResource("8_ckvwl")
region = Rect2(126, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmspm"]
atlas = ExtResource("8_ckvwl")
region = Rect2(144, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikfo1"]
atlas = ExtResource("8_ckvwl")
region = Rect2(162, 0, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_dwom6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0epgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2equ")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbcdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej4tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hilk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr8iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e13mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrdqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmspm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikfo1")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nlqja"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dwom6"]
atlas = ExtResource("6_nlqja")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl2xa"]
atlas = ExtResource("6_nlqja")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15kfc"]
atlas = ExtResource("6_nlqja")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a100"]
atlas = ExtResource("6_nlqja")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_feaue"]
atlas = ExtResource("6_nlqja")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_210s6"]
atlas = ExtResource("6_nlqja")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5qvs7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwom6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl2xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15kfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a100")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feaue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_210s6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_6yjpi")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_right = 1024.0
offset_bottom = 768.0
texture = ExtResource("1_ph3nu")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="map" type="TileMap" parent="."]
tile_set = ExtResource("4_cq4me")
format = 2
layer_0/tile_data = PackedInt32Array(2424856, 458752, 2, 2359320, 655360, 0, 2293784, 458752, 1, 2228248, 458752, 0, 2424855, 458752, 2, 2359319, 589824, 0, 2293783, 655360, 0, 2228247, 458752, 0, 2424854, 458752, 2, 2359318, 655360, 0, 2293782, 589824, 0, 2228246, 458752, 0, 2424853, 458752, 2, 2359317, 655360, 0, 2293781, 589824, 0, 2228245, 458752, 0, 2424852, 458752, 2, 2359316, 458752, 1, 2293780, 458752, 1, 2228244, 458752, 0, 2424851, 458752, 2, 2359315, 655360, 0, 2293779, 655360, 0, 2228243, 458752, 0, 2424850, 458752, 2, 2359314, 458752, 1, 2293778, 458752, 1, 2228242, 458752, 0, 2424849, 458752, 2, 2359313, 458752, 1, 2293777, 655360, 0, 2228241, 458752, 0, 2424848, 458752, 2, 2359312, 655360, 0, 2293776, 458752, 1, 2228240, 458752, 0, 2424847, 458752, 2, 2359311, 589824, 0, 2293775, 589824, 0, 2228239, 458752, 0, 2424846, 458752, 2, 2359310, 655360, 0, 2293774, 458752, 1, 2228238, 458752, 0, 2424845, 458752, 2, 2359309, 458752, 1, 2293773, 589824, 0, 2228237, 458752, 0, 2424844, 458752, 2, 2359308, 589824, 0, 2293772, 458752, 1, 2228236, 458752, 0, 2424843, 458752, 2, 2359307, 458752, 1, 2293771, 589824, 0, 2228235, 458752, 0, 2424842, 458752, 2, 2359306, 655360, 0, 2293770, 655360, 0, 2228234, 458752, 0, 2424841, 458752, 2, 2359305, 458752, 1, 2293769, 589824, 0, 2228233, 458752, 0, 2424840, 458752, 2, 2359304, 589824, 0, 2293768, 589824, 0, 2228232, 458752, 0, 2424839, 458752, 2, 2359303, 458752, 1, 2293767, 458752, 1, 2228231, 458752, 0, 2424838, 458752, 2, 2359302, 589824, 0, 2293766, 655360, 0, 2228230, 458752, 0, 2424837, 458752, 2, 2359301, 458752, 1, 2293765, 589824, 0, 2228229, 458752, 0, 2424836, 458752, 2, 2359300, 458752, 1, 2293764, 655360, 0, 2228228, 458752, 0, 2424835, 458752, 2, 2359299, 589824, 0, 2293763, 655360, 0, 2228227, 589824, 1, 2424834, 393216, 2, 2359298, 393216, 1, 2293762, 393216, 1, 2228226, 393216, 1, 2424862, 458752, 2, 2359326, 458752, 1, 2293790, 589824, 0, 2228254, 458752, 0, 2424861, 458752, 2, 2359325, 655360, 0, 2293789, 589824, 0, 2228253, 458752, 0, 2424860, 458752, 2, 2359324, 458752, 1, 2293788, 655360, 0, 2228252, 458752, 0, 2424859, 458752, 2, 2359323, 458752, 1, 2293787, 458752, 1, 2228251, 458752, 0, 2424858, 458752, 2, 2359322, 655360, 0, 2293786, 589824, 0, 2228250, 458752, 0, 2424857, 458752, 2, 2359321, 655360, 0, 2293785, 589824, 0, 2228249, 458752, 0, 2162691, 524288, 1, 2097155, 524288, 1, 2031619, 524288, 1, 1966083, 524288, 1, 1900547, 524288, 1, 1835011, 458752, 1, 1769475, 589824, 0, 1703939, 589824, 1, 1638403, 524288, 1, 2162690, 393216, 1, 2097154, 393216, 1, 2031618, 393216, 1, 1966082, 393216, 1, 1900546, 393216, 1, 1835010, 393216, 1, 1769474, 393216, 1, 1703938, 393216, 1, 1638402, 393216, 1, 1572867, 524288, 1, 1507331, 524288, 1, 1441795, 524288, 1, 1572866, 393216, 1, 1507330, 393216, 1, 1441794, 393216, 1, 1376259, 524288, 1, 1310723, 524288, 1, 1376258, 393216, 1, 1310722, 393216, 1, 2424868, 524288, 2, 2359332, 524288, 1, 2293796, 524288, 1, 2228260, 524288, 1, 2424867, 458752, 2, 2359331, 655360, 0, 2293795, 655360, 0, 2228259, 458752, 1, 2424866, 458752, 2, 2359330, 655360, 0, 2293794, 589824, 0, 2228258, 655360, 0, 2424865, 458752, 2, 2359329, 589824, 0, 2293793, 458752, 1, 2228257, 655360, 1, 2424864, 458752, 2, 2359328, 589824, 0, 2293792, 458752, 1, 2228256, 458752, 0, 2424863, 458752, 2, 2359327, 655360, 0, 2293791, 589824, 0, 2228255, 458752, 0, 2162704, 1, 0, 2162705, 1, 0, 2162706, 1, 0, 2162707, 1, 0, 1835034, 524288, 2, 1769498, 524288, 1, 1703962, 524288, 1, 1638426, 524288, 1, 1572890, 524288, 1, 1507354, 524288, 1, 1441818, 524288, 1, 1376282, 524288, 1, 1310746, 524288, 1, 1245210, 524288, 1, 1179674, 524288, 0, 1835033, 458752, 2, 1769497, 655360, 0, 1703961, 589824, 0, 1638425, 589824, 0, 1572889, 458752, 1, 1507353, 589824, 0, 1441817, 589824, 0, 1376281, 589824, 0, 1310745, 655360, 0, 1245209, 655360, 0, 1179673, 458752, 0, 1835032, 458752, 2, 1769496, 458752, 1, 1703960, 655360, 1, 1638424, 393216, 1, 1572888, 393216, 1, 1507352, 393216, 1, 1441816, 393216, 1, 1376280, 393216, 1, 1310744, 393216, 1, 1245208, 393216, 1, 1179672, 393216, 0, 1835031, 458752, 2, 1769495, 589824, 0, 1703959, 458752, 0, 1835030, 458752, 2, 1769494, 458752, 1, 1703958, 458752, 0, 1835029, 458752, 2, 1769493, 589824, 0, 1703957, 458752, 0, 1835028, 458752, 2, 1769492, 458752, 1, 1703956, 458752, 0, 1835027, 458752, 2, 1769491, 458752, 1, 1703955, 458752, 0, 1835026, 458752, 2, 1769490, 458752, 1, 1703954, 458752, 0, 1835025, 458752, 2, 1769489, 655360, 0, 1703953, 458752, 0, 1835024, 458752, 2, 1769488, 589824, 0, 1703952, 458752, 0, 1835023, 458752, 2, 1769487, 589824, 0, 1703951, 458752, 0, 1835022, 458752, 2, 1769486, 458752, 1, 1703950, 458752, 0, 1835021, 458752, 2, 1769485, 458752, 1, 1703949, 458752, 0, 1835020, 458752, 2, 1769484, 655360, 0, 1703948, 458752, 0, 1835019, 458752, 2, 1769483, 458752, 1, 1703947, 458752, 0, 1835018, 458752, 2, 1769482, 458752, 1, 1703946, 458752, 0, 1835017, 458752, 2, 1769481, 655360, 0, 1703945, 458752, 0, 1835016, 458752, 2, 1769480, 589824, 0, 1703944, 458752, 0, 1835015, 458752, 2, 1769479, 589824, 0, 1703943, 458752, 0, 1835014, 458752, 2, 1769478, 655360, 0, 1703942, 458752, 0, 1835013, 458752, 2, 1769477, 458752, 1, 1703941, 458752, 0, 1835012, 458752, 2, 1769476, 589824, 0, 1703940, 458752, 0, 2162724, 524288, 1, 2097188, 524288, 1, 2031652, 524288, 1, 1966116, 524288, 1, 1900580, 524288, 1, 1835044, 524288, 1, 1769508, 524288, 1, 1703972, 524288, 1, 1638436, 524288, 1, 1572900, 524288, 1, 1507364, 524288, 1, 1441828, 524288, 1, 1376292, 524288, 1, 1310756, 524288, 1, 1245220, 524288, 1, 1179684, 524288, 1, 2162723, 458752, 1, 2097187, 655360, 0, 2031651, 458752, 1, 1966115, 458752, 1, 1900579, 458752, 1, 1835043, 655360, 0, 1769507, 655360, 0, 1703971, 655360, 0, 1638435, 655360, 0, 1572899, 458752, 1, 1507363, 655360, 0, 1441827, 655360, 0, 1376291, 655360, 0, 1310755, 655360, 0, 1245219, 655360, 0, 1179683, 458752, 1, 2162722, 589824, 0, 2097186, 589824, 0, 2031650, 589824, 0, 1966114, 458752, 1, 1900578, 655360, 0, 1835042, 458752, 1, 1769506, 655360, 0, 1703970, 589824, 0, 1638434, 589824, 0, 1572898, 589824, 0, 1507362, 458752, 1, 1441826, 589824, 0, 1376290, 655360, 0, 1310754, 458752, 1, 1245218, 458752, 1, 1179682, 589824, 0, 2162721, 393216, 1, 2097185, 393216, 1, 2031649, 393216, 1, 1966113, 393216, 1, 1900577, 393216, 1, 1835041, 393216, 1, 1769505, 393216, 1, 1703969, 393216, 1, 1638433, 393216, 1, 1572897, 393216, 1, 1507361, 393216, 1, 1441825, 393216, 1, 1376289, 393216, 1, 1310753, 393216, 1, 1245217, 393216, 1, 1179681, 393216, 1, 1114148, 524288, 1, 1048612, 524288, 1, 983076, 524288, 1, 917540, 524288, 1, 852004, 524288, 1, 786468, 524288, 1, 720932, 524288, 1, 655396, 524288, 1, 589860, 524288, 1, 1114147, 589824, 0, 1048611, 589824, 0, 983075, 589824, 0, 917539, 589824, 0, 852003, 655360, 0, 786467, 458752, 1, 720931, 458752, 1, 655395, 589824, 0, 589859, 589824, 0, 1114146, 655360, 0, 1048610, 458752, 1, 983074, 589824, 0, 917538, 655360, 0, 852002, 655360, 0, 786466, 655360, 0, 720930, 589824, 0, 655394, 655360, 0, 589858, 655360, 0, 1114145, 393216, 1, 1048609, 393216, 1, 983073, 393216, 1, 917537, 393216, 1, 852001, 393216, 1, 786465, 655360, 0, 720929, 655360, 0, 655393, 589824, 0, 589857, 655360, 0, 589856, 655360, 0, 589855, 589824, 0, 589854, 655360, 0, 589853, 655360, 0, 589852, 655360, 0, 589851, 458752, 1, 589850, 655360, 0, 589849, 458752, 1, 589848, 655360, 0, 589847, 655360, 0, 589846, 458752, 1, 589845, 655360, 0, 589844, 655360, 0, 589843, 589824, 0, 589842, 589824, 0, 589841, 458752, 1, 786464, 655360, 0, 720928, 655360, 0, 655392, 458752, 1, 786463, 655360, 0, 720927, 458752, 1, 655391, 655360, 0, 786462, 589824, 0, 720926, 589824, 0, 655390, 655360, 0, 786461, 589824, 0, 720925, 655360, 0, 655389, 589824, 0, 786460, 589824, 0, 720924, 458752, 1, 655388, 589824, 0, 786459, 655360, 0, 720923, 458752, 1, 655387, 589824, 0, 786458, 655360, 0, 720922, 655360, 0, 655386, 589824, 0, 786457, 655360, 0, 720921, 458752, 1, 655385, 589824, 0, 786456, 589824, 0, 720920, 655360, 0, 655384, 589824, 0, 786455, 458752, 1, 720919, 589824, 0, 655383, 589824, 0, 786454, 655360, 0, 720918, 589824, 0, 655382, 458752, 1, 786453, 458752, 1, 720917, 589824, 0, 655381, 458752, 1, 786452, 655360, 0, 720916, 458752, 1, 655380, 655360, 0, 786451, 458752, 2, 720915, 655360, 0, 655379, 458752, 1, 786450, 458752, 2, 720914, 589824, 0, 655378, 458752, 1, 786449, 655360, 0, 720913, 589824, 0, 655377, 458752, 1, 1310738, 524288, 2, 1245202, 524288, 1, 1179666, 524288, 1, 1114130, 524288, 1, 1048594, 524288, 1, 983058, 524288, 1, 917522, 524288, 1, 851986, 524288, 1, 1310737, 458752, 2, 1245201, 655360, 0, 1179665, 589824, 0, 1114129, 458752, 1, 1048593, 655360, 0, 983057, 589824, 0, 917521, 655360, 0, 851985, 458752, 1, 1310736, 458752, 2, 1245200, 458752, 1, 1179664, 589824, 0, 1114128, 655360, 1, 1048592, 393216, 1, 983056, 393216, 1, 917520, 393216, 1, 851984, 393216, 1, 786448, 393216, 1, 720912, 393216, 1, 655376, 458752, 2, 589840, 458752, 1, 1245187, 524288, 1, 1179651, 524288, 1, 1114115, 524288, 1, 1048579, 524288, 1, 983043, 524288, 1, 917507, 524288, 1, 851971, 524288, 1, 786435, 524288, 1, 720899, 524288, 1, 655363, 458752, 2, 589827, 458752, 1, 524291, 458752, 0, 1245186, 393216, 1, 1179650, 393216, 1, 1114114, 393216, 1, 1048578, 393216, 1, 983042, 393216, 1, 917506, 393216, 1, 851970, 393216, 1, 786434, 393216, 1, 720898, 393216, 1, 655362, 393216, 1, 589826, 393216, 1, 524290, 393216, 0, 524292, 458752, 0, 524324, 524288, 0, 524323, 458752, 0, 524322, 458752, 0, 524321, 458752, 0, 524320, 458752, 0, 524319, 458752, 0, 524318, 458752, 0, 524317, 458752, 0, 524316, 458752, 0, 524315, 458752, 0, 524314, 458752, 0, 524313, 458752, 0, 524312, 458752, 0, 524311, 458752, 0, 524310, 458752, 0, 524309, 458752, 0, 524308, 458752, 0, 524307, 458752, 0, 524306, 458752, 0, 524305, 458752, 0, 524304, 458752, 0, 524303, 458752, 0, 524302, 458752, 0, 524301, 458752, 0, 524300, 458752, 0, 524299, 458752, 0, 524298, 458752, 0, 524297, 458752, 0, 524296, 458752, 0, 524295, 458752, 0, 524294, 458752, 0, 524293, 458752, 0, 589839, 458752, 1, 589838, 655360, 0, 589837, 655360, 0, 589836, 458752, 1, 589835, 458752, 1, 589834, 589824, 0, 589833, 655360, 0, 589832, 458752, 1, 589831, 458752, 1, 589830, 655360, 0, 589829, 458752, 1, 589828, 589824, 0, 655375, 458752, 2, 655374, 458752, 2, 655373, 458752, 2, 655372, 458752, 2, 655371, 458752, 2, 655370, 458752, 2, 655369, 458752, 2, 655368, 458752, 2, 655367, 458752, 2, 655366, 458752, 2, 655365, 458752, 2, 655364, 458752, 2, 1638405, 1, 0, 1638406, 1, 0, 1638407, 1, 0, 1638408, 1, 0, 1507360, 1, 1610612736, 1572896, 1, 1610612736, 1441824, 1, 1610612736, 1310735, 458752, 2, 1245199, 458752, 1, 1179663, 458752, 1, 1114127, 458752, 0, 1310734, 458752, 2, 1245198, 655360, 0, 1179662, 655360, 0, 1114126, 458752, 0, 1310733, 458752, 2, 1245197, 458752, 1, 1179661, 458752, 1, 1114125, 458752, 0, 1310732, 458752, 2, 1245196, 655360, 0, 1179660, 458752, 1, 1114124, 458752, 0, 1310731, 458752, 2, 1245195, 589824, 0, 1179659, 589824, 0, 1114123, 458752, 0, 1310730, 458752, 2, 1245194, 655360, 0, 1179658, 655360, 0, 1114122, 458752, 0, 1310729, 393216, 2, 1245193, 393216, 1, 1179657, 393216, 1, 1114121, 393216, 0, 851972, 1, 1342177280, 917508, 1, 1342177280, 786436, 1, 1342177280, 720902, 1, 805306368, 720903, 1, 805306368, 720904, 1, 805306368, 720905, 1, 805306368, 720906, 1, 805306368, 720907, 1, 805306368, 720908, 1, 805306368)

[node name="Boar" parent="." instance=ExtResource("5_6yjpi")]
position = Vector2(309, 400)

[node name="Arrow" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
material = SubResource("CanvasItemMaterial_nlqja")
position = Vector2(504, 528)
sprite_frames = SubResource("SpriteFrames_dwom6")
autoplay = "default"
frame_progress = 0.279914

[node name="Arrow2" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
material = SubResource("CanvasItemMaterial_nlqja")
position = Vector2(210, 530)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_dwom6")
autoplay = "default"
frame_progress = 0.998901

[node name="Arrow3" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
material = SubResource("CanvasItemMaterial_nlqja")
position = Vector2(409, 271)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_dwom6")
autoplay = "default"
frame_progress = 0.333197

[node name="Portal" type="Area2D" parent="."]
position = Vector2(238.74, 254.573)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
shape = SubResource("CapsuleShape2D_nlqja")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Portal"]
sprite_frames = SubResource("SpriteFrames_5qvs7")
autoplay = "default"
frame_progress = 0.510588

[node name="player" parent="." instance=ExtResource("2_6yjpi")]
position = Vector2(106, 533)

[node name="PlayerCamera" type="Camera2D" parent="player"]
zoom = Vector2(0.8, 0.8)
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.3
drag_top_margin = 0.3
drag_right_margin = 0.3
drag_bottom_margin = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("3_gbqnl")

[node name="Label" type="Label" parent="."]
offset_left = 115.0
offset_top = 485.0
offset_right = 227.0
offset_bottom = 508.0
theme = ExtResource("8_nlqja")
theme_override_font_sizes/font_size = 12
text = "左右箭头键移动,
Esc键暂停 "

[node name="Label2" type="Label" parent="."]
offset_left = 414.0
offset_top = 468.0
offset_right = 498.0
offset_bottom = 528.0
theme = ExtResource("8_nlqja")
theme_override_font_sizes/font_size = 12
text = "空格键跳跃,
碰墙后按住方向
键可以爬墙"

[node name="Label3" type="Label" parent="."]
offset_left = 438.0
offset_top = 359.0
offset_right = 522.0
offset_bottom = 419.0
theme = ExtResource("8_nlqja")
theme_override_font_sizes/font_size = 12
text = "按下跳跃键
或反方向移动
可以脱离墙"

[node name="Label4" type="Label" parent="."]
offset_left = 262.0
offset_top = 343.0
offset_right = 346.0
offset_bottom = 403.0
theme = ExtResource("8_nlqja")
theme_override_font_sizes/font_size = 12
text = "按J键攻击,
按K键闪现,
按M键发射飞镖"

[node name="Label5" type="Label" parent="."]
offset_left = 72.0
offset_top = 188.0
offset_right = 209.0
offset_bottom = 227.0
theme = ExtResource("8_nlqja")
theme_override_font_sizes/font_size = 12
text = "到传送门按下Enter键传送
完成教程开始游戏"

[connection signal="body_entered" from="Portal" to="." method="_on_player_entered"]
[connection signal="body_exited" from="Portal" to="." method="_on_player_exited"]
